fix overflowx scroll, and fix show avatar in page user info

--- a/src/assets/scss/_shop.scss
+++ b/src/assets/scss/_shop.scss
@@ -356,6 +356,8 @@
 }
 
 .shop-bottom-area {
+  max-width: 100%;
+  overflow: hidden;
   .col-xl-4 {
     transition: 0.5s;
   }
